sumo/tests/traci/VariableRetrieval/Junction/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 0xa9 0x42 xxx
simstep 6 1
